<resources>
    <string name="app_name">Challenge6-MA</string>
    <string name="konfirmasi_pesanan">Konfirmasi Pesanan</string>
    <string name="delivery_method">Delivery Method</string>
    <string name="take_away">Take Away</string>
    <string name="delivery">Delivery</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash">Cash</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="ringkasan_pembayaran">Ringkasan Pembayaran:</string>
    <string name="total_pembayaran_rp_50_000">Total Pembayaran: Rp. 50.000</string>
    <string name="pesan">Pesan</string>
    <string name="username">Username</string>
    <string name="username1">Username</string>
    <string name="password">Password</string>
    <string name="password1">Password</string>
    <string name="email">Email</string>
    <string name="email1">Email</string>
    <string name="no_telp">No.Telp</string>
    <string name="no_telp1">No.Telp</string>
    <string name="register">Register</string>
    <string name="sudah_punya_akun_masuk">Sudah punya akun? Masuk</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="_1">1</string>
    <string name="rp">Rp</string>
    <string name="_20_000">20.000</string>
    <string name="catatan">Catatan</string>
    <string name="keranjang">Keranjang</string>
    <string name="pesan1">Pesan</string>
    <string name="idr">IDR</string>
    <string name="total">Total</string>
    <string name="total1">total:</string>
    <string name="hai_arvy">Hai, Arvy</string>
    <string name="mau_makan_apa_hari_ini">mau makan apa hari ini?</string>
    <string name="user_botton">User Botton</string>
    <string name="fries">Fries</string>
    <string name="fried_chicken">Fried Chicken</string>
    <string name="sushi">Sushi</string>
    <string name="dimsum">Dimsum</string>
    <string name="list_menu_makanan">List Menu Makanan</string>
    <string name="list_button">List Button</string>
    <string name="dimsum1">Dimsum</string>
    <string name="rp_20_000">Rp. 20.000</string>
    <string name="__1">1</string>
    <string name="catatan1">Catatan:</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="username2">Username</string>
    <string name="username3">Username</string>
    <string name="password2">Password</string>
    <string name="password3">Password</string>
    <string name="email2">Email</string>
    <string name="email3">Email</string>
    <string name="no_telp2">No.Telp</string>
    <string name="no_telp3">No.Telp</string>
    <string name="username4">Username</string>
    <string name="username5">Username</string>
    <string name="password4">Password</string>
    <string name="password5">Password</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun_daftar">Belum punya akun? Daftar</string>
    <string name="home">Home</string>
    <string name="keranjang1">Keranjang</string>
    <string name="profile1">Profile</string>
    <string name="dimsum2">Dimsum</string>
    <string name="rp__20_000">Rp 20.000</string>

</resources>