<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ProfileFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="17dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logoutButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/edit_profile"/>

    <View
        android:id="@+id/lineBar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/tvProfile"
        android:layout_marginTop="17dp"
        android:background="@color/black" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivProfile"
        android:layout_width="154dp"
        android:layout_height="154dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/profil"
        android:scaleType="fitXY"
        android:layout_marginTop="130dp"/>

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username2"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivProfile"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/etUsernameValue"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@color/cardview_shadow_start_color"
        android:text="@string/username"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUsername" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password2"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/etUsernameValue"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="18dp"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/tvPasswordValue"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@color/cardview_shadow_start_color"
        android:text="********"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPassword" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email2"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvPasswordValue"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="18dp"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/tvEmailValue"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@color/cardview_shadow_start_color"
        android:text="Username"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmail" />

    <TextView
        android:id="@+id/tvMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_telp2"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvEmailValue"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="18dp"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/tvMobileValue"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@color/cardview_shadow_start_color"
        android:text="Username"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMobile" />


</androidx.constraintlayout.widget.ConstraintLayout>